Fix z-index layering for dots in events section

--- a/style.css
+++ b/style.css
@@ -131,16 +131,16 @@ position: relative;
   width: 204px;
   background-repeat: no-repeat;
   position: absolute;
-
+  z-index:-1
 }
 .dots-up{
-  top: 190px;
+  top: 90px;
   right: 0;
 
 }
 
 .dots-down{
-  bottom: 190px;
+  bottom: 90px;
   left: 0;
   
 }
@@ -1078,12 +1078,20 @@ margin-bottom: 0;
 .events{
 padding-block: var(--section-padding);
 position: relative;
+z-index:0;
+}
+
+@media (max-width:787px) {
+  .events .dots{
+    display: none;
+  }
 }
 
 .events .container {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  z-index:1;
 }
 
 .events .container img{
@@ -1256,13 +1264,14 @@ padding: 20px;
   padding-block: var(--section-padding);
   background-color: var(--section-background);
   position: relative;
+  z-index:0;
 }
 
 .pricing .container{
   display: grid;
   grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
   gap: 30px;
-  
+  z-index:1;
 }
 
 .pricing .container .box{
